unpackaged/main/default/objects/ConsultaWS__c/ConsultaWS__c.object-meta.xml
<CustomObject>
    <label>ConsultaWS</label>
    <nameField>
        <label>Nombre de ConsultaWS</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ConsultaWS</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>