unpackaged/main/default/objects/ConsultaWS__c/fields/Cuenta_Id__c.field-meta.xml
<CustomField>
    <fullName>Cuenta_Id__c</fullName>
    <label>Cuenta Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>