unpackaged/main/default/objects/ConsultaWS__c/fields/FechaReserva__c.field-meta.xml
<CustomField>
    <fullName>FechaReserva__c</fullName>
    <label>Fecha de Reserva</label>
    <type>Date</type>
</CustomField>