unpackaged/main/default/objects/ConsultaWS__c/fields/Fraccionamiento__c.field-meta.xml
<CustomField>
    <fullName>Fraccionamiento__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Fraccionamiento</label>
    <referenceTo>Fraccionamiento__c</referenceTo>
    <relationshipLabel>ConsultaWS</relationshipLabel>
    <relationshipName>ConsultaWS</relationshipName>
    <type>Lookup</type>
</CustomField>