unpackaged/main/default/objects/ConsultaWS__c/fields/NSS__c.field-meta.xml
<CustomField>
    <fullName>NSS__c</fullName>
    <label>NSS</label>
    <length>11</length>
    <type>Text</type>
</CustomField>