unpackaged/main/default/objects/ConsultaWS__c/fields/NumProceso__c.field-meta.xml
<CustomField>
    <fullName>NumProceso__c</fullName>
    <label>Número de Proceso</label>
    <length>255</length>
    <type>Text</type>
</CustomField>